Clear stringCache explicitly instead of asserting its emptiness.

This assumption does not hold when PathView's path.pathElements list is
updated with new contents at runtime.

Task-number: QTBUG-46255
Change-Id: I6b0d7ee8ee2d67ca0138eacdf0ad221338f788e4
Reviewed-by: Alan Alpert <aalpert@blackberry.com>